crates/daml-syntax/tests/compile_fail/diagnostic_end_column_exhaustive_match.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
 --> tests/compile_fail/diagnostic_end_column_exhaustive_match.rs:4:11
  |
4 |     match end_column {
  |           ^^^^^^^^^^ pattern `_` not covered
  |
note: `DiagnosticEndColumn` defined here
 --> src/lib.rs
  |
  | pub enum DiagnosticEndColumn {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: the matched value is of type `DiagnosticEndColumn`
  = note: `DiagnosticEndColumn` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
  |
7 ~         DiagnosticEndColumn::EmptySpan => "empty",
8 ~         _ => todo!(),
  |
